--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "workbench.colorTheme": "Default Light+",
-  "window.zoomLevel": 0,
   "editor.fontFamily": "Fira Code",
   "editor.fontLigatures": true,
   "ruby.codeCompletion": "rcodetools",
@@ -12,7 +11,6 @@
     "editor.defaultFormatter": "rebornix.ruby"
   },
   "explorer.confirmDragAndDrop": false,
-  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
   },
@@ -30,6 +28,27 @@
   "solargraph.formatting": true,
   "ruby.format": "rubocop",
   "terminal.integrated.env.osx": {
+    "deno.enable": true
   },
-  "typescript.updateImportsOnFileMove.enabled": "always"
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "git.autofetch": true,
+  "cSpell.userWords": ["BIGBOSS", "Skus", "mainproductsku", "upsert"],
+  "aws.profile": "profile:default",
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "mssql.connections": [
+    {
+      "server": "{{put-server-name-here}}",
+      "database": "{{put-database-name-here}}",
+      "user": "{{put-username-here}}",
+      "password": "{{put-password-here}}"
+    }
+  ],
+  "editor.formatOnSave": true,
+  "solargraph.autoformat": true,
+  "editor.cursorBlinking": "expand"
 }
